--- a/mainpage.dox
+++ b/mainpage.dox
@@ -153,7 +153,7 @@
  * <tr>
  * <td colspan='2'><a href="classMicrosoft_1_1PEFormat.html"><tt>PE</tt> (<tt>.exe</tt>)</a></td>
  * <td rowspan='3'>Intel 80386</td>
- * <td>Windows (32-bit)<br>Windows NT<br>Windows 95<br>Win32s (unimplemented)</td>
+ * <td>Windows (32-bit)<br>Windows NT<br>Windows 95<br>Win32s</td>
  * </tr>
  *
  * <tr>
