--- a/mainpage.dox
+++ b/mainpage.dox
@@ -143,7 +143,7 @@
  * <td rowspan='3'><a href="classAOut_1_1AOutFormat.html">32-bit UNIX a.out</a></td>
  * <td>OMAGIC<br>NMAGIC<br>ZMAGIC</td>
  * <td>VAX</td>
- * <td>AT&T UNIX/32V and UNIX System III (untested)<br>4.3BSD</td>
+ * <td>AT&T UNIX/32V and UNIX System III<br>4.3BSD</td>
  * </tr>
  *
  * <tr>
@@ -338,25 +338,25 @@
  * <tr>
  * <td colspan='2'><a href="classBrocaD3X_1_1D3X1Format.html">D3X1</a></td>
  * <td>Intel 80386</td>
- * <td>D3X DOS extender (unimplemented)</td>
+ * <td>D3X DOS extender</td>
  * </tr>
  *
  * <tr>
  * <td colspan='2'><a href="classSeychellDOS32_1_1AdamFormat.html">Adam</a></td>
  * <td>Intel 80386</td>
- * <td>Adam Seychell DOS32 extender (unimplemented)</td>
+ * <td>Adam Seychell DOS32 extender</td>
  * </tr>
  *
  * <tr>
  * <td colspan='2'><a href="classDX64_1_1LVFormat.html">64-bit Flat file</a></td>
  * <td>AMD64</td>
- * <td>DX64 DOS extender (unimplemented)</td>
+ * <td>DX64 DOS extender</td>
  * </tr>
  *
  * <tr>
  * <td colspan='2'><a href="classDX64_1_1LVFormat.html">64-bit LV file</a></td>
  * <td>AMD64</td>
- * <td>DX64 DOS extender (unimplemented)</td>
+ * <td>DX64 DOS extender</td>
  * </tr>
  *
  * </table>
