--- a/mainpage.dox
+++ b/mainpage.dox
@@ -302,7 +302,7 @@
  * <tr>
  * <td colspan='2'><a href="classBinary_1_1CPM3Format.html">CP/M Plus (<tt>.com</tt>)</a></td>
  * <td>Intel 8080</td>
- * <td>CP/M Plus (untested)</td>
+ * <td>CP/M Plus</td>
  * </tr>
  *
  * <tr>
